--- a/base.css
+++ b/base.css
@@ -26,7 +26,7 @@ nav a.aaa {
 	color:black;
 	display:inline;								
 	float:left;	    
-	width:25%; height: 25px;/*親要素の25％の長さ　25ｐｘの高さ*/
+	width:20%; height: 25px;/*親要素の25％の長さ　25ｐｘの高さ*/
 	text-align:center;
 	text-decoration: none;
 	padding: 8px 0px 0px 0px;
@@ -42,6 +42,10 @@ section{
     height:1000px;
     margin:0 auto;		
 
+}
+section#state{
+    height: auto;
+    
 }
 section#top{
     background-color: #ffffff;   
