--- a/base.css
+++ b/base.css
@@ -44,6 +44,7 @@ section{
 
 }
 section#state{
+    width: 96vw;
     max-width: 1200px;
     height: auto;
     
@@ -63,6 +64,14 @@ section#mo{
 	background-image:url('images/skin/CorkBoard02.jpg');
     
        
+}
+
+/* ----------------------------------状況（フレーム）↓------------------------------------------------ */
+#state iframe {
+    width: 100%;
+    hwight: auto;
+    
+    
 }
 
 /* ----------------------------------トップページ↓------------------------------------------------ */
